src/tests/utils/errors/errorNumberToHexString.ts
export default function errorNumberToHexString(errorCode: number): string {
  return errorCode.toString(16);
}
